force-app/main/default/objects/JobRun__c/JobRun__c.object-meta.xml
<CustomObject>
    <label>JobRun</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>JobRun</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JobRuns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>