force-app/main/default/objects/JobRun__c/fields/CancelledAt__c.field-meta.xml
<CustomField>
    <fullName>CancelledAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CancelledAt</label>
    <type>DateTime</type>
</CustomField>