force-app/main/default/objects/JobRun__c/fields/Checkpoint__c.field-meta.xml
<CustomField>
    <fullName>Checkpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checkpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>