force-app/main/default/objects/JobRun__c/fields/CompletedAt__c.field-meta.xml
<CustomField>
    <fullName>CompletedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CompletedAt</label>
    <type>DateTime</type>
</CustomField>