force-app/main/default/objects/JobRun__c/fields/EndedAt__c.field-meta.xml
<CustomField>
    <fullName>EndedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EndedAt</label>
    <type>DateTime</type>
</CustomField>