force-app/main/default/objects/JobRun__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error_Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>