force-app/main/default/objects/JobRun__c/fields/ErrorSummary__c.field-meta.xml
<CustomField>
    <fullName>ErrorSummary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ErrorSummary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>