force-app/main/default/objects/JobRun__c/fields/Failed_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Count__c</fullName>
    <label>Failed_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>