force-app/main/default/objects/JobRun__c/fields/FinishedAt__c.field-meta.xml
<CustomField>
    <fullName>FinishedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FinishedAt</label>
    <type>DateTime</type>
</CustomField>