force-app/main/default/objects/JobRun__c/fields/LastHeartbeat__c.field-meta.xml
<CustomField>
    <fullName>LastHeartbeat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LastHeartbeat</label>
    <type>DateTime</type>
</CustomField>