force-app/main/default/objects/JobRun__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>