force-app/main/default/objects/JobRun__c/fields/NextRetryAt__c.field-meta.xml
<CustomField>
    <fullName>NextRetryAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NextRetryAt</label>
    <type>DateTime</type>
</CustomField>