force-app/main/default/objects/JobRun__c/fields/NextRunTime__c.field-meta.xml
<CustomField>
    <fullName>NextRunTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NextRunTime</label>
    <type>DateTime</type>
</CustomField>