force-app/main/default/objects/JobRun__c/fields/OwnerComment__c.field-meta.xml
<CustomField>
    <fullName>OwnerComment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OwnerComment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>