force-app/main/default/objects/JobRun__c/fields/Processed_Count__c.field-meta.xml
<CustomField>
    <fullName>Processed_Count__c</fullName>
    <label>Processed_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>