force-app/main/default/objects/JobRun__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QueueName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>