force-app/main/default/objects/JobRun__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>