force-app/main/default/objects/JobRun__c/fields/ResultMessage__c.field-meta.xml
<CustomField>
    <fullName>ResultMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ResultMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>