force-app/main/default/objects/JobRun__c/fields/RetryAt__c.field-meta.xml
<CustomField>
    <fullName>RetryAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RetryAt</label>
    <type>DateTime</type>
</CustomField>