force-app/main/default/objects/JobRun__c/fields/RuntimeMs__c.field-meta.xml
<CustomField>
    <fullName>RuntimeMs__c</fullName>
    <label>RuntimeMs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>