force-app/main/default/objects/JobRun__c/fields/StartedAt__c.field-meta.xml
<CustomField>
    <fullName>StartedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>StartedAt</label>
    <type>DateTime</type>
</CustomField>